--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,12 @@
 
 	<!--App -->
 	<link rel="stylesheet" href="dist/css/controllers/home/home.css"/>
+	<link rel="stylesheet" href="dist/css/controllers/admin/admin.css"/>
 
 	<script src="js/app.js"></script>
 	<script src="js/services/Helper.js"></script>
 	<script src="js/controllers/home/home_controller.js"></script>
+	<script src="js/controllers/admin/admin_controller.js"></script>
 </head>
 <body ng-cloak>
 
