--- a/www/js/controllers/home/home_template.html
+++ b/www/js/controllers/home/home_template.html
@@ -1,4 +1,4 @@
-<div id="content" class="hidden">
+<div id="content" ng-class="{ hidden: !enteredPassword }">
 	<div class="mountains-wrapper sky">
 		<div class="mountains-container">
 			<div id="mountain1" class="mountain"></div>
